# Walmart_sales_analysis_project

./: README.md  walmart_project.ipynb
python-boilerplate/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml
python-boilerplate/docs/: index.md  installation.md  usage.md
python-boilerplate/src/python_boilerplate/: __init__.py  cli.py  utils.py
python-boilerplate/tests/: __init__.py  test_python_boilerplate.py
